--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # 为了解决编译报错 ：java.io 异常而增加
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
+org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8 --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
 --add-opens=java.base/java.lang=ALL-UNNAMED \
 --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
 --add-opens=java.base/java.io=ALL-UNNAMED \
@@ -57,3 +57,4 @@ androidAop.reflectInvokeMethod.static = true
 #2、请注意androidAop.reflectInvokeMethod.variantOnlyDebug 设置为 true 时 release 包会忽略 androidAop.reflectInvokeMethod = true 的设置自动不走反射，设为 false 时则没有这种效果（不写默认false）
 #3、androidAop.reflectInvokeMethod.static 设置为 true 模拟了非反射的情况兼顾了反射的编译速度，不写默认true，如果想使用反射建议设置此项为 true。设置为 false 则为纯反射
 #4、androidAop.reflectInvokeMethod.variantOnlyDebug 只对 Android 的 Library 有效,对 Java 或 Kotlin 的 Library 无效
+
