完善微信开放平台

--- a/library_util/src/main/AndroidManifest.xml
+++ b/library_util/src/main/AndroidManifest.xml
@@ -19,5 +19,8 @@
           android:theme="@android:style/Theme.Translucent.NoTitleBar"
           android:taskAffinity="com.knight.kotlin.wanandroid" />
    </application>
-
+   <!--         在应用的AndroidManifest.xml添加如下<queries>标签-->
+   <queries>
+      <package android:name="com.tencent.mm" />
+   </queries>
 </manifest>
