引入开眼评论功能

--- a/module_eye_video_detail/src/main/AndroidManifest.xml
+++ b/module_eye_video_detail/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
 
     <application>
         <activity
-            android:name=".activity.EyeVideoDetailActivity">
+            android:name=".activity.EyeVideoDetailActivity"
+            >
         </activity>
     </application>
 </manifest>
