引入星座模块

--- a/nowinandroid/app/build.gradle
+++ b/nowinandroid/app/build.gradle
@@ -173,6 +173,7 @@ dependencies {
     implementation project(":nowinandroid:feature:module_realtime")
     implementation project(":nowinandroid:feature:module_eye_square")
     implementation project(":nowinandroid:feature:module_eye_recommend")
+    implementation project(":nowinandroid:feature:module_constellate")
     implementation Dependencies.JetPack.HILT_CORE
     kapt Dependencies.JetPack.HILT_APT
     kapt Dependencies.JetPack.HILT_ANDROIDX
