--- a/nowinandroid/nowinandroid.includes.gradle
+++ b/nowinandroid/nowinandroid.includes.gradle
@@ -21,6 +21,7 @@ include(":nowinandroid:feature:module_video")
 include(":nowinandroid:feature:module_utils")
 include(":nowinandroid:feature:module_web")
 include(":nowinandroid:feature:module_wechat")
+include(":nowinandroid:feature:module_constellate")
 //这里注意一下 如果使用模块-api化后，使用includeWithApi 不用 include ':module_set'
 includeWithApi(":nowinandroid:feature:module_set")
 //core
