--- a/nowinandroid/feature/module_realtime/src/main/manifest/AndroidManifest.xml
+++ b/nowinandroid/feature/module_realtime/src/main/manifest/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.knight.kotlin.module_realtime"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.knight.kotlin.module_realtime">
 
     <application
         android:name=".RealTimeAloneApplication"
@@ -35,15 +35,15 @@
             android:name="design_height_in_dp"
             android:value="100000" />
 
-        <activity
-            android:name=".activity.RealTimeActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--        <activity-->
+<!--            android:name=".activity.RealTimeActivity"-->
+<!--            android:exported="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
     </application>
 
 </manifest>
