--- a/nowinandroid/nowinandroid.includes.gradle
+++ b/nowinandroid/nowinandroid.includes.gradle
@@ -36,5 +36,6 @@ include(":nowinandroid:core:library_biometric")
 include(":nowinandroid:core:library_network")
 include(":nowinandroid:core:library_scan")
 include(":nowinandroid:core:library_video")
+//include(":nowinandroid:core:library_plugin")
 //依赖aar
 include(":nowinandroid:core:module_aar:aar")
