--- a/nowinandroid/app/build.gradle
+++ b/nowinandroid/app/build.gradle
@@ -147,27 +147,27 @@ android {
     //打包排除加载so文件
     packaging {
         jniLibs {
-            exclude("lib/armeabi-v7a/liblocSDK8b.so")
-            exclude("lib/arm64-v8a/liblocSDK8b.so")
+            //exclude("lib/armeabi-v7a/liblocSDK8b.so")
+         //   exclude("lib/arm64-v8a/liblocSDK8b.so")
             exclude("lib/armeabi-v7a/libBaiduMapSDK_map_for_navi_v7_6_4.so")
             exclude("lib/arm64-v8a/libBaiduMapSDK_map_for_navi_v7_6_4.so")
             exclude("lib/armeabi-v7a/libapp_BaiduNaviApplib.so")
             exclude("lib/arm64-v8a/libapp_BaiduNaviApplib.so")
-            exclude("lib/armeabi-v7a/libNative.so")
-            exclude("lib/arm64-v8a/libNative.so")
-            exclude("lib/armeabi-v7a/libLaneSeg.so")
-            exclude("lib/arm64-v8a/libLaneSeg.so")
-
-
-            exclude("lib/armeabi-v7a/libBaiduMapSDK_base_v7_6_4.so")
-            exclude("lib/arm64-v8a/libBaiduMapSDK_base_v7_6_4.so")
-
-
-            exclude("lib/armeabi-v7a/libc++_shared.so")
-            exclude("lib/arm64-v8a/libc++_shared.so")
-
-            exclude("lib/armeabi-v7a/libtiny_magic.so")
-            exclude("lib/arm64-v8a/libtiny_magic.so")
+//            exclude("lib/armeabi-v7a/libNative.so")
+//            exclude("lib/arm64-v8a/libNative.so")
+//            exclude("lib/armeabi-v7a/libLaneSeg.so")
+//            exclude("lib/arm64-v8a/libLaneSeg.so")
+//
+//
+//            exclude("lib/armeabi-v7a/libBaiduMapSDK_base_v7_6_4.so")
+//            exclude("lib/arm64-v8a/libBaiduMapSDK_base_v7_6_4.so")
+//
+//
+//            exclude("lib/armeabi-v7a/libc++_shared.so")
+//            exclude("lib/arm64-v8a/libc++_shared.so")
+//
+//            exclude("lib/armeabi-v7a/libtiny_magic.so")
+//            exclude("lib/arm64-v8a/libtiny_magic.so")
         }
 
     }
