完成so动态下发方案

--- a/core/library_base/build.gradle
+++ b/core/library_base/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     api Dependencies.OtherUtils.BAIDUNAVI
     api Dependencies.OtherUtils.BAIDUSEARCH
     api Dependencies.OtherUtils.BAIDUUTIL
+    //workManager
+    api Dependencies.JetPack.WORK_MANAGER
 }
