修改下地图引入位置(100%)

--- a/nowinandroid/core/library_base/build.gradle
+++ b/nowinandroid/core/library_base/build.gradle
@@ -17,4 +17,10 @@ dependencies {
     kapt Dependencies.JetPack.HILT_APT
     kapt Dependencies.JetPack.HILT_ANDROIDX
 
+
+    //百度地图
+    api Dependencies.OtherUtils.BAIDULOCATION
+    api Dependencies.OtherUtils.BAIDUNAVI
+    api Dependencies.OtherUtils.BAIDUSEARCH
+    api Dependencies.OtherUtils.BAIDUUTIL
 }
