权限库优化完毕

--- a/nowinandroid/core/library_permiss/build.gradle
+++ b/nowinandroid/core/library_permiss/build.gradle
@@ -3,6 +3,9 @@ import com.knight.wanandroid.buildsrc.*
 //apply from:'../base_library.gradle'
 apply from: "${project.rootDir}/base_library.gradle"
 android {
+    buildFeatures {
+        viewBinding = true
+    }
     namespace = "com.knight.kotlin.library_permiss"
 }
 dependencies {
