完成星座运势页面头像

--- a/nowinandroid/feature/module_constellate/src/main/AndroidManifest.xml
+++ b/nowinandroid/feature/module_constellate/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application>
         <activity
             android:name=".activity.ConstellateMainActivity" />
+        <activity android:name=".activity.ConstellateFateActivity"/>
     </application>
 
 </manifest>
