解决星座暗黑模式问题 优化切换viewpager2高度不一致问题

--- a/nowinandroid/core/library_permiss/build.gradle
+++ b/nowinandroid/core/library_permiss/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation project(":nowinandroid:core:library_util")
     //implementation project(path: ':library_base')
     implementation project(path: ':nowinandroid:core:library_base')
+    implementation project(path: ':core:library_devicecompat')
     kapt Dependencies.JetPack.HILT_APT
     kapt Dependencies.JetPack.HILT_ANDROIDX
     kapt Dependencies.GitHub.AUTO_SERVICE_ANNOTATIONS
