--- a/nowinandroid/core/library_crypt/CMakeLists.txt
+++ b/nowinandroid/core/library_crypt/CMakeLists.txt
@@ -5,6 +5,8 @@
 # Sets the minimum CMake version required for this project.
 cmake_minimum_required(VERSION 3.6.0)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/jniLibs/${ANDROID_ABI})
+# ✅ 这里加上 16KB 对齐参数
+set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-z,max-page-size=16384")
 # Declares the project name. The project name can be accessed via ${ PROJECT_NAME},
 # Since this is the top level CMakeLists.txt, the project name is also accessible
 # with ${CMAKE_PROJECT_NAME} (both CMake variables are in-sync within the top level
