--- a/nowinandroid/app/src/main/AndroidManifest.xml
+++ b/nowinandroid/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
             tools:node="remove"
             />
 
+
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="929JduF7WMY53BuMS8LBm12K0yma7plU" >
@@ -66,7 +67,11 @@
         <!-- 百度 地图开启子进程 -->
         <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote"> </service>
 
-
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="remove" />
 
     </application>
 
