--- a/base_module.gradle
+++ b/base_module.gradle
@@ -86,7 +86,7 @@ android {
         }
         release {
             buildConfigField "String","TYPE","\"${ProjectBuildDencies.Variants.RELEASE}\""
-            minifyEnabled false
+            minifyEnabled true
            // consumerProguardFiles 'proguard-rules.pro'
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
