--- a/gradle.properties
+++ b/gradle.properties
@@ -57,5 +57,5 @@ androidAop.reflectInvokeMethod.static = true
 #2、请注意androidAop.reflectInvokeMethod.variantOnlyDebug 设置为 true 时 release 包会忽略 androidAop.reflectInvokeMethod = true 的设置自动不走反射，设为 false 时则没有这种效果（不写默认false）
 #3、androidAop.reflectInvokeMethod.static 设置为 true 模拟了非反射的情况兼顾了反射的编译速度，不写默认true，如果想使用反射建议设置此项为 true。设置为 false 则为纯反射
 #4、androidAop.reflectInvokeMethod.variantOnlyDebug 只对 Android 的 Library 有效,对 Java 或 Kotlin 的 Library 无效
-
-
+# 在启用混淆时关闭 full mode
+# android.enableR8.fullMode=false
