--- a/nowinandroid/app/build.gradle
+++ b/nowinandroid/app/build.gradle
@@ -159,7 +159,9 @@ android {
 
 }
 
-
+hilt {
+    enableAggregatingTask = true
+}
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
