--- a/core/library_common/build.gradle
+++ b/core/library_common/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     api Dependencies.Androidx.APP_COMPAT
     implementation Dependencies.JetPack.HILT_CORE
     kapt Dependencies.JetPack.HILT_APT
-    kapt Dependencies.JetPack.HILT_ANDROIDX
+    //kapt Dependencies.JetPack.HILT_ANDROIDX
     api Dependencies.GitHub.GO_ROUTER
     kapt Dependencies.GitHub.GO_ROUTER_COMPILER
     api Dependencies.GitHub.GSON
