--- a/core/library_devicecompat/build.gradle
+++ b/core/library_devicecompat/build.gradle
@@ -14,5 +14,5 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation Dependencies.JetPack.HILT_CORE
     kapt Dependencies.JetPack.HILT_APT
-    kapt Dependencies.JetPack.HILT_ANDROIDX
+    //kapt Dependencies.JetPack.HILT_ANDROIDX
 }
