--- a/nowinandroid/core/library_aop/build.gradle
+++ b/nowinandroid/core/library_aop/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     kapt Dependencies.GitHub.GO_ROUTER_COMPILER
     implementation Dependencies.JetPack.HILT_CORE
     kapt Dependencies.JetPack.HILT_APT
-    kapt Dependencies.JetPack.HILT_ANDROIDX
+    //kapt Dependencies.JetPack.HILT_ANDROIDX
     //非必须项 👇，如果你想自定义切面需要用到，⚠️支持Java和Kotlin代码写的切面
     ksp Dependencies.GitHub.ANDROID_KSP
 }
