--- a/nowinandroid/core/library_base/build.gradle
+++ b/nowinandroid/core/library_base/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     api project(":nowinandroid:core:library_common")
     implementation Dependencies.JetPack.HILT_CORE
     kapt Dependencies.JetPack.HILT_APT
-    kapt Dependencies.JetPack.HILT_ANDROIDX
+    //kapt Dependencies.JetPack.HILT_ANDROIDX
 
 
 
