--- a/nowinandroid/core/library_biometric/build.gradle
+++ b/nowinandroid/core/library_biometric/build.gradle
@@ -13,6 +13,6 @@ dependencies {
     implementation project(path: ':nowinandroid:core:library_base')
     implementation Dependencies.JetPack.HILT_CORE
     kapt Dependencies.JetPack.HILT_APT
-    kapt Dependencies.JetPack.HILT_ANDROIDX
+    //kapt Dependencies.JetPack.HILT_ANDROIDX
 
 }
