--- a/nowinandroid/core/library_common/build.gradle
+++ b/nowinandroid/core/library_common/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     api project(path:':core:library_common')
     implementation Dependencies.JetPack.HILT_CORE
     kapt Dependencies.JetPack.HILT_APT
-    kapt Dependencies.JetPack.HILT_ANDROIDX
+    //kapt Dependencies.JetPack.HILT_ANDROIDX
 
     //百度地图
     api Dependencies.OtherUtils.BAIDULOCATION
