--- a/nowinandroid/core/library_database/build.gradle
+++ b/nowinandroid/core/library_database/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     api Dependencies.JetPack.ROOM_KTX
     kapt Dependencies.JetPack.ROOM_COMPILER
     kapt Dependencies.JetPack.HILT_APT
-    kapt Dependencies.JetPack.HILT_ANDROIDX
+    //kapt Dependencies.JetPack.HILT_ANDROIDX
     kapt Dependencies.GitHub.AUTO_SERVICE_ANNOTATIONS
     kapt Dependencies.GitHub.GO_ROUTER_COMPILER
     implementation project(path: ':nowinandroid:core:library_base')
