--- a/nowinandroid/core/library_network/build.gradle
+++ b/nowinandroid/core/library_network/build.gradle
@@ -17,6 +17,6 @@ dependencies {
     implementation Dependencies.JetPack.HILT_CORE
 
     kapt Dependencies.JetPack.HILT_APT
-    kapt Dependencies.JetPack.HILT_ANDROIDX
+    //kapt Dependencies.JetPack.HILT_ANDROIDX
 
 }
