--- a/nowinandroid/core/library_permiss/build.gradle
+++ b/nowinandroid/core/library_permiss/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     implementation project(path: ':nowinandroid:core:library_base')
     implementation project(path: ':core:library_devicecompat')
     kapt Dependencies.JetPack.HILT_APT
-    kapt Dependencies.JetPack.HILT_ANDROIDX
+    //kapt Dependencies.JetPack.HILT_ANDROIDX
     kapt Dependencies.GitHub.AUTO_SERVICE_ANNOTATIONS
     kapt Dependencies.GitHub.GO_ROUTER_COMPILER
 }
