--- a/nowinandroid/core/library_share/build.gradle
+++ b/nowinandroid/core/library_share/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     implementation project(":nowinandroid:core:library_util")
     implementation Dependencies.JetPack.HILT_CORE
     kapt Dependencies.JetPack.HILT_APT
-    kapt Dependencies.JetPack.HILT_ANDROIDX
+    //kapt Dependencies.JetPack.HILT_ANDROIDX
     implementation Dependencies.Androidx.APP_COMPAT
 
 
