--- a/nowinandroid/core/library_util/build.gradle
+++ b/nowinandroid/core/library_util/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     implementation Dependencies.GitHub.GLIDE
     implementation Dependencies.Androidx.RECYCLEVIEW
     kapt Dependencies.JetPack.HILT_APT
-    kapt Dependencies.JetPack.HILT_ANDROIDX
+    //kapt Dependencies.JetPack.HILT_ANDROIDX
 
     kapt Dependencies.GitHub.AUTO_SERVICE_ANNOTATIONS
     kapt Dependencies.GitHub.GO_ROUTER_COMPILER
