--- a/nowinandroid/core/library_video/build.gradle
+++ b/nowinandroid/core/library_video/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     implementation project(path: ':nowinandroid:core:library_base')
     implementation Dependencies.JetPack.HILT_CORE
     kapt Dependencies.JetPack.HILT_APT
-    kapt Dependencies.JetPack.HILT_ANDROIDX
+    //kapt Dependencies.JetPack.HILT_ANDROIDX
     implementation Dependencies.Androidx.APP_COMPAT
 
 
