--- a/nowinandroid/core/library_widget/build.gradle
+++ b/nowinandroid/core/library_widget/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation Dependencies.JetPack.HILT_CORE
     kapt Dependencies.JetPack.HILT_APT
-    kapt Dependencies.JetPack.HILT_ANDROIDX
+    //kapt Dependencies.JetPack.HILT_ANDROIDX
     implementation project(":nowinandroid:core:library_util")
     implementation project(":nowinandroid:core:library_base")
     api Dependencies.GitHub.SWIPE_RECYCLERVIEW
