--- a/nowinandroid/feature/module_web/src/main/AndroidManifest.xml
+++ b/nowinandroid/feature/module_web/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         <activity android:name=".activity.WebPreviewPhotoActivity"/>
         <activity android:name=".activity.WebArticleActivity"/>
         <activity android:name=".activity.WebTransitionActivity"/>
+        <activity android:name=".activity.NewWebViewActivity"/>
 
     </application>
 
