--- a/nowinandroid/feature/module_web/src/main/AndroidManifest.xml
+++ b/nowinandroid/feature/module_web/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         <activity android:name=".activity.WebArticleActivity"/>
         <activity android:name=".activity.WebTransitionActivity"/>
         <activity android:name=".activity.NewWebViewActivity"/>
+        <activity android:name=".activity.NewArticleWebActivity"/>
 
     </application>
 
